--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,3 +35,12 @@ code {
   display: flex;
   gap: 20px;
 }
+
+input{
+   box-shadow: none;
+   margin-top: 10px;
+}
+
+button{
+    margin-top: 20px;
+}
